# 优化JVM GC相关示例